<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/img_card_product"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_card_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Milk tea"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                    android:id='@+id/btn_count'
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    app:initialNumber="1"
                    app:finalNumber="100"
                    app:backGroundColor="@color/colorPrimaryDark"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/edt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/edt_comment_hint"
        android:lines="1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <ScrollView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--- Group 1 -> cup sizes -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_sizes"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold"
                    android:padding="4dp"
                    android:textSize="14sp"
                    android:background="@drawable/text_round_gray"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="8dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_sizeM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_sizeM"/>

                    <RadioButton
                        android:id="@+id/radio_sizeL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_sizeL"/>

                </RadioGroup>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$+0"
                        android:textSize="18sp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+$3"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp"
                        android:layout_alignParentRight="true" />

                </LinearLayout>
            </RelativeLayout>

            <!--- Group 2 -> Sugar -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_sugar"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold"
                    android:padding="4dp"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp"
                    android:background="@drawable/text_round_gray"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="8dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_sugar100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_sugar100"/>

                    <RadioButton
                        android:id="@+id/radio_sugar70"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_sugar70"/>

                    <RadioButton
                        android:id="@+id/radio_sugar50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_sugar50"/>

                    <RadioButton
                        android:id="@+id/radio_sugar30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_sugar30"/>

                    <RadioButton
                        android:id="@+id/radio_sugarfree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_sugarfree"/>

                </RadioGroup>


            </RelativeLayout>

            <!--- Group 3 -> Ice -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_ice"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold"
                    android:padding="4dp"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp"
                    android:background="@drawable/text_round_gray"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="8dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_ice100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_ice100"/>

                    <RadioButton
                        android:id="@+id/radio_ice70"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_ice70"/>

                    <RadioButton
                        android:id="@+id/radio_ice50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_ice50"/>

                    <RadioButton
                        android:id="@+id/radio_ice30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_ice30"/>

                    <RadioButton
                        android:id="@+id/radio_icefree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_icefree"/>

                </RadioGroup>


            </RelativeLayout>

            <!--- Group 4 -> Topping -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_topping"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_topping"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>




        </LinearLayout>
    </ScrollView>


</LinearLayout>